--- a/src/components/TransactionHistory/TransactionHistory.module.css
+++ b/src/components/TransactionHistory/TransactionHistory.module.css
@@ -2,7 +2,7 @@
   margin-top: 30px;
   color: black;
   background-color: white;
-  width: 100%;
+  width: 25vw;
   text-align: center;
   border: 2px solid black;
 }
